fix: off-centre brochure buttons

--- a/src/pages/welcomePage/welcomePage.css
+++ b/src/pages/welcomePage/welcomePage.css
@@ -91,7 +91,6 @@
 }
 
 .button-container {
-  width: 110%;
   margin-top: 4%;
   display: flex;
   flex-flow: row wrap;
